kubernetes/apps/default/home-assistant/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: default
subsets:
- addresses:
  - ip: ${SECRET_HOME_ASSISTANT_IP}
  ports:
  - name: http
    port: 8123
    protocol: TCP
